# yolov1-pytorch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  detect.py  eval.py  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  auto-assign.yml
.github/workflows/: pylint.yml
nets/: backbone.py  darknet.py  nn.py  yolo.py
utils/: dataset.py  loss.py  util.py  utils.py
