[metadata]
name = project-template
version = 0.0.0
author = Yakhyokhuja Valikhujaev
author_email = yakhyo9696@gmail.com
description = Template for ML/DL projects
readme = README.md
python_requires = >=3.10
license_file = LICENSE

[bdist_wheel]
universal=1

[pep8]
max-line-length = 120

[flake8]
# note: we ignore all 501s (line too long) anyway as they're taken care of by black
max-line-length = 120
ignore = E203, E402, W503, W504, F821, E501, E266, F401, F841, F541
per-file-ignores =
    __init__.py: F401, F403, F405
    ./hubconf.py: F401
exclude = docs*

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
